Bug 138253 - Crash swlo!SwNodeIndex::~SwNodeIndex+0x18 (gen)
Summary: Crash swlo!SwNodeIndex::~SwNodeIndex+0x18 (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
: 137781 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-16 10:56 UTC by Telesto
Modified: 2020-12-01 16:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-11-16 10:56:03 UTC
Description:
Crash swlo!SwNodeIndex::~SwNodeIndex+0x18

Steps to Reproduce:
1. Open attachment 166748 [details] bug 137781
2. Select frame 2 on page 2
3. CTRL+X
4. CTRL+Z
5. CTRL+X -> Shape still visible but wrong page see bug 137781
6. File -> Reload
7. Select frame 2 on page 2
8. CTRL+X -> Crash

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 94e6e140491de31c0788c91af855a75a3bb12709
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-11-16 10:56:21 UTC
Bibisected using my own bibisect repo.

First bad commit:

    2020-09-08 09:11:24 +0200 da4f9b77a6cd39b1ae5babdd476d1575c8b9371c
    tdf#135149 sw: fix deleting textbox of as-char shapes

Possible range: 5989ffe70942af036974b70c9e0ecd67978c6cc6..da4f9b77a6cd39b1ae5babdd476d1575c8b9371c

where da4f9b77a6cd39b1ae5babdd476d1575c8b9371c is the most suspicious bad one.

Adding Miklos Vajna in cc list: Would you please also take a look?

https://bugs.documentfoundation.org/show_bug.cgi?id=137786#c6
Comment 2 Telesto 2020-11-16 10:57:39 UTC
Setting to NEW; original report - bug 137786 - got hijacked by different bug
Comment 3 Telesto 2020-11-16 10:58:38 UTC
Adding CC to Miklos Vajna 

This was previously: bug 137786
Comment 4 Xisco Faulí 2020-11-16 12:34:40 UTC
I can't reproduce the crash in

Version: 7.1.0.0.alpha1+
Build ID: 548d77d0c06f7088dd3eb408797aa1fc1d7eb277
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2020-11-16 12:36:28 UTC
but I do with GEN
Comment 6 Xisco Faulí 2020-11-16 12:42:49 UTC
(In reply to Telesto from comment #1)
> Bibisected using my own bibisect repo.
> 
> First bad commit:
> 
>     2020-09-08 09:11:24 +0200 da4f9b77a6cd39b1ae5babdd476d1575c8b9371c
>     tdf#135149 sw: fix deleting textbox of as-char shapes
> 

I do confirm LibreOffice doesn't crash if the mentioned commit is reverted.

Adding Cc: to Miklos Vajna
Comment 7 Commit Notification 2020-11-24 08:05:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/42e8e16cf93dcf944e5c1106f76aaa32057c0397

tdf#138253 sw textbox: fix content of draw format on undo

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-11-24 10:13:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/67ff7910fc5b9799bcd1f6ed66dc537aa7bbf336

tdf#138253 sw textbox: fix content of draw format on undo

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2020-11-25 10:22:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/bce74af0eb8b9fff8c9b6b99c4a314d98f626570

tdf#138253 sw textbox: fix content of draw format on undo

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2020-12-01 16:12:21 UTC
Verified in

Version: 7.2.0.0.alpha0+
Build ID: 79ec66700266a22966d9e308a716be56c9c3a4a7
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 11 Xisco Faulí 2020-12-01 16:15:12 UTC
*** Bug 137781 has been marked as a duplicate of this bug. ***